26.2: resource-pack-proof antixray (default HIDE + raytrace), stacker anti-siphon + hologram xray fix, 150-player perf tuning, CI build+boot-test, fresh README + banner
- Antixray ON by default: Paper HIDE engine-mode 1 + max-block-height 320 (enclosed ores stone in-packet, resource-pack-proof) + raytrace layer on for cave-exposed ores
- Stacker: never merge across distinct pickup-owners (anti-siphon), hologram view-range clamp (no through-wall item-xray)
- Perf: baseline adaptive AI throttle (>80 blocks, every 2nd tick) for 150+ headroom; SelfTune escalates under load
- CI build.yml rewrite: java25, 26.2, applyAllPatches+compile+assemble, boot server to Done + stop
- README rewritten for 26.2 survival + 150-player tuning guide; banner refreshed
- paper-server patches regenerated (antixray defaults + SWM /swm removal now persisted)